coordinate axes when dragging test fields align with text, not the box. fixes #1571

--- a/public/less/document-pages.less
+++ b/public/less/document-pages.less
@@ -93,6 +93,7 @@
     left: 0px;
     background: #dedede;
     position: absolute;
+    z-index: 1000;
 }
 
 .vline {
@@ -100,6 +101,7 @@
     top: 0px;
     background: #dedede;
     position: absolute;
+    z-index: 1000;
 }
 
 .placedfield {
